tests/compiletests/ui/image/gather_err.stderr
error[E0277]: the trait bound `Image<f32, 0, 2, 0, 0, 1, 0, 4>: HasGather` is not satisfied
  --> $DIR/gather_err.rs:15:34
   |
LL |     let r1: glam::Vec4 = image1d.gather(*sampler, 0.0f32, 0);
   |                                  ^^^^^^ the trait `HasGather` is not implemented for `Image<f32, 0, 2, 0, 0, 1, 0, 4>`
   |
help: the following other types implement trait `HasGather`
  --> crates/spirv-std/src/image.rs:1652:0
  ::: crates/spirv-std/src/image.rs:1669:5
   |
   = note: `Image<SampledType, 1, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>`
  ::: crates/spirv-std/src/image.rs:1689:5
   |
   = note: `Image<SampledType, 4, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>`
  ::: crates/spirv-std/src/image.rs:1709:5
   |
   = note: `Image<SampledType, 3, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>`
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, spirv_std::::image::{impl#1}::{constant#0}, SAMPLED, FORMAT, COMPONENTS>::gather`
  --> crates/spirv-std/src/image.rs:190:4
   = note: this error originates in the attribute macro `crate::macros::gpu_only` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Image<f32, 2, 2, 0, 0, 1, 0, 4>: HasGather` is not satisfied
  --> $DIR/gather_err.rs:16:34
   |
LL |     let r2: glam::Vec4 = image3d.gather(*sampler, v3, 0);
   |                                  ^^^^^^ the trait `HasGather` is not implemented for `Image<f32, 2, 2, 0, 0, 1, 0, 4>`
   |
help: the following other types implement trait `HasGather`
  --> crates/spirv-std/src/image.rs:1652:0
  ::: crates/spirv-std/src/image.rs:1669:5
   |
   = note: `Image<SampledType, 1, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>`
  ::: crates/spirv-std/src/image.rs:1689:5
   |
   = note: `Image<SampledType, 4, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>`
  ::: crates/spirv-std/src/image.rs:1709:5
   |
   = note: `Image<SampledType, 3, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>`
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, spirv_std::::image::{impl#1}::{constant#0}, SAMPLED, FORMAT, COMPONENTS>::gather`
  --> crates/spirv-std/src/image.rs:190:4
   = note: this error originates in the attribute macro `crate::macros::gpu_only` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
